changed ipfs cloud provider - now is pinata

--- a/result/download-ipfs-file.html
+++ b/result/download-ipfs-file.html
@@ -1,5 +1,5 @@
-<a href="https://moneyviz-notarify.infura-ipfs.io/ipfs/QmeyDsWbUXYSoT4bLVNpgjh3fPTEAipn284BYGyocndqbm" download="folder-tree.txt">Ipfs Link to folder-tree.txt</a><br>
-<a href="https://moneyviz-notarify.infura-ipfs.io/ipfs/QmRizhWydaidoPUSeL5xs2RmLaqQqM698rNHbjUCwhiiCm" download="sha256-file-list.txt">Ipfs Link to sha256-file-list.txt</a><br>
+<a href="https://gold-leading-penguin-781.mypinata.cloud/ipfs/QmeyDsWbUXYSoT4bLVNpgjh3fPTEAipn284BYGyocndqbm?pinataGatewayToken=QC5qRy0ffm6hQs5uYcPPjOivIJ7vE_PlzUMA5ETQ8kPcZ-IB-2PM6U_YE3C6_dPk" download="folder-tree.txt">Ipfs Link to folder-tree.txt</a><br>
+<a href="https://gold-leading-penguin-781.mypinata.cloud/ipfs/QmRizhWydaidoPUSeL5xs2RmLaqQqM698rNHbjUCwhiiCm?pinataGatewayToken=QC5qRy0ffm6hQs5uYcPPjOivIJ7vE_PlzUMA5ETQ8kPcZ-IB-2PM6U_YE3C6_dPk" download="sha256-file-list.txt">Ipfs Link to sha256-file-list.txt</a><br>
 
     <button onclick="downloadFiles()">Download Files</button>
     <script>
